Transform constraint maps wrongly with negative scale #27886

Closed
opened 2011-07-06 21:42:03 +02:00 by Anna Celarek · 3 comments

%%%svn 38162M

Open the attached file.
There are two bones.
Y scale of the green bone is controlled through a Transform constraint with the grey bone as source.

Mapping is as follows:
Source range -1 to 1 maps to destination 0 to 2
so theoretically, scale should be mapped like this:
(grey bone source -> green bone destination)

  • 1 -> 0
    0 -> 1
    1 -> 2
    actually, it maps like this
  • 1 -> 2
    0 -> 1
    1 -> 2

So for the negative values, the absolute value is calculated before mapping, instead of a linear transformation as would be expected. It is not possible to use negative scaling of the source at all.

same problem occurs for all axes.
%%%

%%%svn 38162M Open the attached file. There are two bones. Y scale of the green bone is controlled through a Transform constraint with the grey bone as source. Mapping is as follows: Source range -1 to 1 maps to destination 0 to 2 so theoretically, scale should be mapped like this: (grey bone source -> green bone destination) - 1 -> 0 0 -> 1 1 -> 2 actually, it maps like this - 1 -> 2 0 -> 1 1 -> 2 So for the negative values, the absolute value is calculated before mapping, instead of a linear transformation as would be expected. It is not possible to use negative scaling of the source at all. same problem occurs for all axes. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Applied a hack-fix in SVN which makes it possible to be able to detect this case.

However, due to the underlying maths, it is advised that you only try to do this with one scaling axis per bone only, since we cannot actually distinguish between scaling on the different axes.%%%

%%%Applied a hack-fix in SVN which makes it possible to be able to detect this case. However, due to the underlying maths, it is advised that you only try to do this with one scaling axis per bone only, since we cannot actually distinguish between scaling on the different axes.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#27886
No description provided.